// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contest IDs cannot start with an underscore 1`] = `
[ZodError: [
  {
    "code": "custom",
    "path": [
      "id"
    ],
    "message": "IDs may not start with an underscore"
  }
]]
`;

exports[`ensures election date is YYYY-MM-DD 1`] = `
ZodError {
  "message": "[
  {
    "code": "custom",
    "message": "Date must be in the format YYYY-MM-DD",
    "path": [
      "date"
    ],
    "input": "not ISO"
  }
]",
  "name": "ZodError",
}
`;

exports[`parsing gives specific errors for nested objects 1`] = `
[ZodError: [
  {
    "code": "invalid_union",
    "errors": [
      [
        {
          "expected": "string",
          "code": "invalid_type",
          "path": [
            "title"
          ],
          "message": "Invalid input: expected string, received number"
        }
      ],
      [
        {
          "expected": "string",
          "code": "invalid_type",
          "path": [
            "title"
          ],
          "message": "Invalid input: expected string, received number"
        },
        {
          "code": "invalid_value",
          "values": [
            "yesno"
          ],
          "path": [
            "type"
          ],
          "message": "Invalid input: expected \\"yesno\\""
        },
        {
          "expected": "string",
          "code": "invalid_type",
          "path": [
            "description"
          ],
          "message": "Invalid input: expected string, received undefined"
        },
        {
          "expected": "object",
          "code": "invalid_type",
          "path": [
            "yesOption"
          ],
          "message": "Invalid input: expected object, received undefined"
        },
        {
          "expected": "object",
          "code": "invalid_type",
          "path": [
            "noOption"
          ],
          "message": "Invalid input: expected object, received undefined"
        }
      ]
    ],
    "path": [
      "contests",
      1
    ],
    "message": "Invalid input"
  }
]]
`;

exports[`parsing validates candidate party references 1`] = `
[ZodError: [
  {
    "code": "custom",
    "path": [
      "contests",
      0,
      "candidates",
      0,
      "partyIds",
      0
    ],
    "message": "Candidate 'C' in contest 'CC' has party 'not-a-party', but no such party is defined. Parties defined: [PARTY]."
  }
]]
`;

exports[`parsing validates contest party references 1`] = `
[ZodError: [
  {
    "code": "custom",
    "path": [
      "contests",
      0,
      "partyId"
    ],
    "message": "Contest 'CC' has party 'not-a-party', but no such party is defined. Parties defined: [PARTY]."
  }
]]
`;

exports[`parsing validates district references 1`] = `
[ZodError: [
  {
    "code": "custom",
    "path": [
      "ballotStyles",
      0,
      "districts",
      0
    ],
    "message": "Ballot style '1' has district 'D', but no such district is defined. Districts defined: [DIS]."
  }
]]
`;

exports[`parsing validates precinct references 1`] = `
[ZodError: [
  {
    "code": "custom",
    "path": [
      "ballotStyles",
      0,
      "precincts",
      0
    ],
    "message": "Ballot style '1' has precinct 'P', but no such precinct is defined. Precincts defined: [PRE]."
  }
]]
`;

exports[`supports ballot layout paper size 1`] = `
[ZodError: [
  {
    "code": "invalid_value",
    "values": [
      "letter",
      "legal",
      "custom-8.5x17",
      "custom-8.5x19",
      "custom-8.5x22"
    ],
    "path": [
      "ballotLayout",
      "paperSize"
    ],
    "message": "Invalid option: expected one of \\"letter\\"|\\"legal\\"|\\"custom-8.5x17\\"|\\"custom-8.5x19\\"|\\"custom-8.5x22\\""
  }
]]
`;

exports[`supports ballot layout paper size 2`] = `
[ZodError: [
  {
    "expected": "object",
    "code": "invalid_type",
    "path": [
      "ballotLayout"
    ],
    "message": "Invalid input: expected object, received string"
  }
]]
`;

exports[`validates uniqueness of ballot style ids 1`] = `
[ZodError: [
  {
    "code": "custom",
    "path": [
      1,
      "id"
    ],
    "message": "Duplicate ballot style '1' found."
  }
]]
`;

exports[`validates uniqueness of candidate ids within a contest 1`] = `
[ZodError: [
  {
    "code": "custom",
    "path": [
      "candidates",
      1,
      "id"
    ],
    "message": "Duplicate candidate 'C' found."
  }
]]
`;

exports[`validates uniqueness of contest ids 1`] = `
[ZodError: [
  {
    "code": "custom",
    "path": [
      "contests",
      2,
      "id"
    ],
    "message": "Duplicate contest 'CC' found."
  },
  {
    "code": "custom",
    "path": [
      "contests",
      3,
      "id"
    ],
    "message": "Duplicate contest 'YNC' found."
  },
  {
    "code": "custom",
    "path": [
      "contests",
      2,
      "yes/noOption",
      "id"
    ],
    "message": "Duplicate yes/no contest option 'YNC-option-yes' found."
  },
  {
    "code": "custom",
    "path": [
      "contests",
      3,
      "yes/noOption",
      "id"
    ],
    "message": "Duplicate yes/no contest option 'YNC-option-no' found."
  }
]]
`;

exports[`validates uniqueness of district ids 1`] = `
[ZodError: [
  {
    "code": "custom",
    "path": [
      "districts",
      1,
      "id"
    ],
    "message": "Duplicate district 'D' found."
  }
]]
`;

exports[`validates uniqueness of party ids 1`] = `
[ZodError: [
  {
    "code": "custom",
    "path": [
      "parties",
      1,
      "id"
    ],
    "message": "Duplicate party 'PARTY' found."
  }
]]
`;

exports[`validates uniqueness of precinct ids 1`] = `
[ZodError: [
  {
    "code": "custom",
    "path": [
      "precincts",
      1,
      "id"
    ],
    "message": "Duplicate precinct 'P' found."
  }
]]
`;
